--- a/app/src/main/res/layout/chat_item_webpage.xml
+++ b/app/src/main/res/layout/chat_item_webpage.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                style="@style/Item.Root"
-                android:layout_marginBottom="0dp"
-        >
 
-    <include layout="@layout/chat_item_avatar"/>
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <TextView
+            android:id="@+id/link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="4dp"
+            android:paddingBottom="4dp"
+            android:textColor="#000"
+            android:autoLink="web"/>
+    <ru.korniltsev.telegram.chat.adapter.view.PhotoMessageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <include layout="@layout/chat_item_nick_and_time"/>
-
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  style="@style/item_content_with_margins"
-                  android:layout_marginTop="3dp"
-            android:orientation="vertical">
-        <TextView
-                android:id="@+id/link"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingRight="4dp"
-                android:paddingBottom="4dp"
-                android:textColor="#000"
-                android:autoLink="web"/>
-        <ru.korniltsev.telegram.chat.adapter.view.PhotoMessageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                />
-    </LinearLayout>
-
-</RelativeLayout>
+            />
+</LinearLayout>
