--- a/app/src/main/res/layout/chat_item_message_forward.xml
+++ b/app/src/main/res/layout/chat_item_message_forward.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.korniltsev.telegram.chat.adapter.view.ForwardedMessageView xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -40,6 +40,6 @@
             android:layout_below="@id/forward_nick"
             android:paddingRight="8dp"
             />
-</RelativeLayout>
+</ru.korniltsev.telegram.chat.adapter.view.ForwardedMessageView>
 
 
