--- a/app/src/main/res/layout/chat_item_audio.xml
+++ b/app/src/main/res/layout/chat_item_audio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.korniltsev.telegram.chat.adapter.view.AudioMessageView
+<ru.korniltsev.telegram.chat.adapter.view.VoiceMessageView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/audio"
         android:layout_width="match_parent"
@@ -35,5 +35,5 @@
             android:paddingRight="8dp"
             />
 
-</ru.korniltsev.telegram.chat.adapter.view.AudioMessageView>
+</ru.korniltsev.telegram.chat.adapter.view.VoiceMessageView>
         <!--</RelativeLayout>-->
