--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="56dp"
             android:orientation="vertical">
+
         <TextView
                 android:id="@+id/empty_view"
                 android:layout_width="wrap_content"
@@ -22,7 +23,8 @@
                 android:text="@string/empty_chat"
                 android:layout_gravity="center"
                 />
-        <LinearLayout android:layout_width="match_parent"
+        <LinearLayout
+                android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="vertical">
             <include
@@ -208,6 +210,13 @@
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                 />
+        <FrameLayout
+                android:id="@+id/toolbar_shadow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                style="@style/ToolbarShadow">
+
+        </FrameLayout>
     </ru.korniltsev.telegram.chat.keyboard.hack.TrickyFrameLayout>
 
     <!-- frame to create translate animations-->
