--- a/app/src/main/res/layout/chat_item_real_audio.xml
+++ b/app/src/main/res/layout/chat_item_real_audio.xml
@@ -20,11 +20,17 @@
                 android:id="@+id/song_singer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="#333333"/>
         <TextView
                 android:id="@+id/song_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="#b3b3b3"/>
     </LinearLayout>
 </ru.korniltsev.telegram.chat.adapter.view.AudioMessageView>
