--- a/app/src/main/res/layout/chat_list_view.xml
+++ b/app/src/main/res/layout/chat_list_view.xml
@@ -8,8 +8,8 @@
         style="@style/PathRoot"
         >
 
-    <LinearLayout
-            android:id="@+id/root"
+    <ru.korniltsev.telegram.core.audio.LinearLayoutWithShadow
+            android:id="@+id/toolbar_shadow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -18,30 +18,23 @@
         <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 app:theme="@style/ToolBarStyle"
                 app:popupTheme="@style/Theme.AppCompat.Light"
-                android:elevation="4dp"
                 android:background="?attr/colorPrimary"
                 android:paddingRight="4dp"
                 />
 
-        <FrameLayout
+        <include layout="@layout/view_mini_player"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                style="@style/ToolbarShadow"
-                >
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                />
 
-                    />
-        </FrameLayout>
-
-    </LinearLayout>
+    </ru.korniltsev.telegram.core.audio.LinearLayoutWithShadow>
 
     <LinearLayout
             android:layout_width="304dp"
@@ -116,7 +109,6 @@
                     android:text="@string/logout"
                     android:drawableLeft="@drawable/ic_logout"
                     style="@style/DrawerButton"/>
-
 
         </LinearLayout>
     </LinearLayout>
