--- a/app/src/main/res/layout/chat_view.xml
+++ b/app/src/main/res/layout/chat_view.xml
@@ -31,7 +31,7 @@
                 android:text="@string/empty_chat"
                 android:layout_gravity="center"
                 />
-        <ru.korniltsev.telegram.core.audio.LinearLayoutWithShadow
+        <ru.korniltsev.telegram.audio.LinearLayoutWithShadow
                 android:id="@+id/toolbar_shadow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -133,7 +133,7 @@
 
             </ru.korniltsev.telegram.chat.adapter.view.MessagePanel>
 
-        </ru.korniltsev.telegram.core.audio.LinearLayoutWithShadow>
+        </ru.korniltsev.telegram.audio.LinearLayoutWithShadow>
         <FrameLayout
                 android:id="@+id/bot_commands_list_container"
                 android:layout_width="match_parent"
