--- a/core/src/main/res/layout/view_mini_player.xml
+++ b/core/src/main/res/layout/view_mini_player.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.korniltsev.telegram.core.audio.MiniPlayerView
+<ru.korniltsev.telegram.audio.MiniPlayerView
         android:id="@+id/mini_player"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
@@ -29,4 +29,4 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_closeplayer"
             android:background="@drawable/bg_keyboard_tab"/>
-</ru.korniltsev.telegram.core.audio.MiniPlayerView>
+</ru.korniltsev.telegram.audio.MiniPlayerView>
