--- a/app/src/main/res/layout/audio_player_view.xml
+++ b/app/src/main/res/layout/audio_player_view.xml
@@ -12,6 +12,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <ImageView
+                android:id="@+id/stub"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_nocover"
+                android:background="#F4F4F4"
+                android:scaleType="center"/>
+        <ImageView
                 android:id="@+id/cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
