--- a/app/src/main/res/layout/grid_item_sticker.xml
+++ b/app/src/main/res/layout/grid_item_sticker.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<ru.korniltsev.telegram.emoji.PooledImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/img"
            android:layout_width="@dimen/sticker_size"
            android:layout_height="@dimen/sticker_size"
-           android:scaleType="fitCenter"
-           android:clickable="false"
            android:background="@drawable/bg_keyboard_tab"
         />
