--- a/app/src/main/res/layout/auth_set_password.xml
+++ b/app/src/main/res/layout/auth_set_password.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.korniltsev.telegram.auth.code.EnterCodeView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                android:orientation="vertical"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                style="@style/PathRoot"
+<ru.korniltsev.telegram.auth.password.EnterPasswordView xmlns:android="http://schemas.android.com/apk/res/android"
+                                                        android:orientation="vertical"
+                                                        android:layout_width="match_parent"
+                                                        android:layout_height="match_parent"
+                                                        style="@style/PathRoot"
         >
 
     <include
@@ -32,22 +32,23 @@
                     android:layout_marginRight="18dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
-                    android:textCursorDrawable="@null"
+                    android:text="@string/enter_your_pass"
                     />
 
             <EditText
                     android:id="@+id/sms_code"
-                    android:layout_width="144dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/we_have_sent"
-                    android:inputType="number"
-                    android:digits="0123456789"
+                    android:inputType="textPassword"
                     android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
                     android:imeOptions="actionDone"
+                    android:textCursorDrawable="@null"
                     />
 
         </RelativeLayout>
 
     </FrameLayout>
 
-</ru.korniltsev.telegram.auth.code.EnterCodeView>
+</ru.korniltsev.telegram.auth.password.EnterPasswordView>
