--- a/app/src/main/res/layout/auth_set_phone_number_view.xml
+++ b/app/src/main/res/layout/auth_set_phone_number_view.xml
@@ -34,6 +34,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="8dp"
+                        android:textCursorDrawable="@null"
                         />
 
                 <EditText
@@ -45,6 +46,7 @@
                         android:layout_marginLeft="16dp"
                         android:inputType="phone"
                         android:imeOptions="actionNext"
+                        android:textCursorDrawable="@null"
                         />
 
                 <EditText
@@ -61,6 +63,7 @@
                         android:singleLine="true"
                         android:digits="0123456789 -()"
                         android:imeOptions="actionDone"
+                        android:textCursorDrawable="@null"
                         />
 
                 <TextView
