--- a/app/src/main/res/layout/chat_list_view.xml
+++ b/app/src/main/res/layout/chat_list_view.xml
@@ -74,7 +74,7 @@
                     android:layout_marginTop="16dp"
                     />
 
-            <TextView
+            <ru.korniltsev.telegram.chat_list.view.MyPhoneView
                     android:id="@+id/drawer_phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
