--- a/app/src/main/res/layout/chat_list_item_chat.xml
+++ b/app/src/main/res/layout/chat_list_item_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ru.korniltsev.telegram.chat_list.view.DividerRelativeLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="horizontal"
@@ -101,4 +101,4 @@
                 />
     </LinearLayout>
 
-</ru.korniltsev.telegram.chat_list.view.DividerRelativeLayout>
+</RelativeLayout>
