--- a/app/src/main/res/layout/profile_item_chat_participant.xml
+++ b/app/src/main/res/layout/profile_item_chat_participant.xml
@@ -36,6 +36,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="@color/text_black"
+                android:singleLine="true"
+                android:paddingRight="8dp"
                 />
         <TextView
                 android:id="@+id/status"
