--- a/app/src/main/res/layout/passcode_view.xml
+++ b/app/src/main/res/layout/passcode_view.xml
@@ -17,41 +17,41 @@
             android:background="?attr/colorPrimary"
             />
 
-    <ImageView
-            android:id="@+id/logo"
-            android:src="@drawable/ic_logo"
-            android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp"/>
+    <!--<ImageView-->
+            <!--android:id="@+id/logo"-->
+            <!--android:src="@drawable/ic_logo"-->
+            <!--android:layout_width="wrap_content"-->
+               <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="60dp"/>-->
 
-    <TextView
-            android:id="@+id/passcode_hint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:layout_marginTop="166dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:textColor="#d3eafb"
-            android:paddingBottom="12dp"
-            android:text="@string/enter_your_password"/>
-    <EditText
-            android:id="@+id/passcode_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="192dp"
-            android:gravity="center_horizontal"
-            android:textSize="16sp"
-            android:textColor="#fff"
-            android:textCursorDrawable="@null"
-            android:inputType="textPassword"
-            android:imeOptions="actionDone"
+    <!--<TextView-->
+            <!--android:id="@+id/passcode_hint"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingLeft="16dp"-->
+            <!--android:paddingRight="16dp"-->
+            <!--android:layout_marginTop="166dp"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:textColor="#d3eafb"-->
+            <!--android:paddingBottom="12dp"-->
+            <!--android:text="@string/enter_your_password"/>-->
+    <!--<EditText-->
+            <!--android:id="@+id/passcode_field"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="40dp"-->
+            <!--android:layout_marginRight="40dp"-->
+            <!--android:layout_marginTop="192dp"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="#fff"-->
+            <!--android:textCursorDrawable="@null"-->
+            <!--android:inputType="textPassword"-->
+            <!--android:imeOptions="actionDone"-->
 
-            />
+            <!--/>-->
 
 
 
