textfield на старых трубках

--- a/app/src/main/res/layout/auth_set_name_view.xml
+++ b/app/src/main/res/layout/auth_set_name_view.xml
@@ -31,7 +31,7 @@
                     android:inputType="textCapWords"
                     android:imeOptions="actionNext"
                     android:hint="@string/hint_first_name"
-
+                    style="@style/MyEditTextCompat"
                     />
 
             <EditText
@@ -43,7 +43,7 @@
 
                     android:imeOptions="actionDone"
                     android:hint="@string/hint_last_name"
-
+                    style="@style/MyEditTextCompat"
                     />
         </LinearLayout>
 
