--- a/app/src/main/res/layout/passcode_view_password.xml
+++ b/app/src/main/res/layout/passcode_view_password.xml
@@ -2,7 +2,8 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
     <ImageView
             android:id="@+id/logo"
@@ -37,6 +38,6 @@
             android:textCursorDrawable="@null"
             android:inputType="textPassword"
             android:imeOptions="actionDone"
-
+            style="@style/MyEditTextCompat"
             />
 </FrameLayout>
