--- a/app/src/main/res/layout/auth_set_code_view.xml
+++ b/app/src/main/res/layout/auth_set_code_view.xml
@@ -44,7 +44,7 @@
                     android:digits="0123456789"
                     android:layout_marginLeft="16dp"
                     android:imeOptions="actionDone"
-                    android:textCursorDrawable="@null"
+                    style="@style/MyEditTextCompat"
                     />
 
         </RelativeLayout>
