--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,14 @@
         <item name="android:paddingRight">16dp</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="MyEditTextCompat">
+        <item name="android:background">@drawable/bg_textfield_selector</item>
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingTop">4dp</item>
+
+    </style>
 
 </resources>
