--- a/app/src/main/res/layout/chat_list_item_chat.xml
+++ b/app/src/main/res/layout/chat_list_item_chat.xml
@@ -33,11 +33,11 @@
             android:paddingRight="15dp"
             >
 
-        <ImageView
+        <View
                 android:id="@+id/group_chat_icon"
                 android:layout_width="16dp"
                 android:layout_height="9dp"
-                android:src="@drawable/ic_group"
+                android:background="#ef0"
                 android:layout_marginRight="6dp"
                 android:layout_marginBottom="4dp"
                 />
@@ -60,6 +60,8 @@
                 android:layout_height="12dp"
                 android:layout_marginLeft="6dp"
                 android:layout_marginBottom="4dp"
+                android:alpha="0.4"
+                android:visibility="invisible"
                 />
 
         <TextView
@@ -68,9 +70,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
                 android:textSize="13sp"
-                android:textColor="#999999"
+                android:textColor="#00000000"
                 />
     </LinearLayout>
+
     <!-- bottom -->
     <LinearLayout
             android:layout_width="match_parent"
