ic unread badge

--- a/app/src/main/res/layout/chat_list_item_chat.xml
+++ b/app/src/main/res/layout/chat_list_item_chat.xml
@@ -101,13 +101,14 @@
 
         <!--<item name="android:fontFamily">sans-serif</item>-->
         <!--<item name="android:textStyle">normal</item>-->
-        <TextView
+        <View
                 android:id="@+id/icon_bottom"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:textColor="#fff"
                 android:gravity="center"
                 android:layout_marginTop="2dp"
+                android:visibility="invisible"
                 />
     </LinearLayout>
 
