--- a/app/src/main/res/layout/chat_list_item_chat.xml
+++ b/app/src/main/res/layout/chat_list_item_chat.xml
@@ -97,6 +97,7 @@
                 android:paddingTop="3dp"
                 android:fontFamily="sans-serif"
                 android:textStyle="normal"
+                android:visibility="invisible"
                 />
 
         <!--<item name="android:fontFamily">sans-serif</item>-->
