--- a/app/src/main/res/layout/profile_edit_pass_code.xml
+++ b/app/src/main/res/layout/profile_edit_pass_code.xml
@@ -3,7 +3,7 @@
                                                                android:orientation="vertical"
                                                                android:layout_width="match_parent"
                                                                android:layout_height="match_parent"
-                                                               android:background="#f1f1f1"
+                                                               android:background="#F4F4F4"
 
         >
 
