--- a/app/src/main/res/layout/chat_toolbar_title.xml
+++ b/app/src/main/res/layout/chat_toolbar_title.xml
@@ -31,6 +31,7 @@
                 android:textSize="16sp"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:gravity="left"
                 />
         <TextView
                 android:id="@+id/subtitle"
