--- a/app/src/main/res/layout/fake_toolbar_wth_avatar_and_title.xml
+++ b/app/src/main/res/layout/fake_toolbar_wth_avatar_and_title.xml
@@ -32,6 +32,7 @@
                 android:textSize="16sp"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:gravity="left"
                 />
         <TextView
                 android:id="@+id/subtitle"
