--- a/app/src/main/res/layout/chat_info_view.xml
+++ b/app/src/main/res/layout/chat_info_view.xml
@@ -20,7 +20,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
+            android:layout_height="56dp"
             app:theme="@style/ToolBarStyle"
             app:popupTheme="@style/Theme.AppCompat.Light"
             android:background="?attr/colorPrimary"
