--- a/app/src/main/res/layout/profile_media_preview_item.xml
+++ b/app/src/main/res/layout/profile_media_preview_item.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/video_play_button"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:background="#fff"
+                android:src="@drawable/ic_playsm"
                 android:layout_gravity="right"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
